# ecto_opencv

./: CMakeLists.txt
cells/cv_bp/opencv/: CMakeLists.txt
cells/opencv/features2d/: CMakeLists.txt
cells/opencv/highgui/: imshow.cpp
samples/: list_reader.py
test/: image_gen.py
